# Poseidon

./: README.md  README.md~
1D_Heat_Transfer/: CMakeLists.txt  CMakeLists.txt~  main  main.cpp  oneD_heattransfer.cpp
2D_Heat_Transfer/: CMakeLists.txt  main.cpp
2D_Navier_Stokes/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  old_main.cpp  readOutputFile.m  readOutputFile.m~  solver.cpp
2D_Navier_Stokes/Debug/: Lpfile.m  NSsolver  Pfile.m  U.m  Ufile.m  Vfile.m  operator.m  operator.output
2D_Navier_Stokes/Debug/Re1000/: Vfile.m
2D_Navier_Stokes/Debug/Re10000/: Pfile.m  Ufile.m  Vfile.m
2D_Navier_Stokes/Debug/t100/: Pfile.m  Ufile.m  Vfile.m
2D_Navier_Stokes/Debug/t1000/: Pfile.m  Ufile.m  Vfile.m
2D_Navier_Stokes/Debug/t50/: Pfile.m  Ufile.m  Vfile.m
2D_Navier_Stokes/LidDrivenCavityValidation/: Re100_y.txt  Re100_y.txt~  resultsVerification.m
2D_Navier_Stokes/LidDrivenCavityValidation/Re100/: Vfile.m
2D_Navier_Stokes/LidDrivenCavityValidation/Re1000/: Pfile.m  Ufile.m
2D_Navier_Stokes/LidDrivenCavityValidation/Re10000/: Pfile.m  Ufile.m  Vfile.m
Matlab_Solver/: NSsolver.m  NSsolver.m~  deltaFunction.m  testDynamics.m  testFunc.m  testFunc.m~
Matlab_Solver/Defined_motion_fsi/: Fxhist.txt  Fyhist.txt  U.txt  boundaryCondition.txt  pointCloud.txt
Matlab_Solver/FUNCTIONAL_FORM/: P.txt  U.txt  V.txt  information.txt  main.m  pointCloud.txt  postProcess.m
Matlab_Solver/Functional_form/: V.txt  fxt.txt  main.m
Matlab_Solver/SOLVER/: NSsolver.m  NSsolver.m~
cmake_file_for_PETSC/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  main.cpp~  main.c~  myTest
test/: CMakeLists.txt  main.cpp
(+82 files in other folders)
